[package]
name = "key_value_store"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
anyhow = { version = "1.0.71", features = ["backtrace"]}
sentry-tracing = {version = "0.31.0"}
sentry = { version = "0.31.0",features = ["backtrace", "anyhow"] }
sentry-anyhow = { version= "0.31.1", features = ["backtrace"]}
tracing = "0.1"
tracing-opentelemetry-instrumentation-sdk = "0.12.0"
mkdirp = "1.0.0"