[package]
name = "kv_store"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs = { path = "../fs" }
sled = "0.34.7"
anyhow = { version = "1.0.71", features = ["backtrace"]}
sentry-anyhow = { version= "0.31.1", features = ["backtrace"]}
tracing = "0.1"
tracing-opentelemetry-instrumentation-sdk = "0.12.0"
lazy_static = "1.4.0"