[package]
name = "nats-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto" }
events = { path = "../../core/events" }
anyhow = { workspace = true }

tokio = { workspace = true }
async-nats = { workspace = true }
tracing = { workspace = true }
nkeys = { workspace = true }
bytes = { workspace = true }
