[package]
name = "nats_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto" }
anyhow = { version = "1.0.71", features = ["backtrace"]}
bytes = "1.5.0"
async-nats = "0.31.0"
nkeys = "0.3.2"
base64 = "0.21.4"
mkdirp = "1.0.0"
openssl = "0.10.56"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
sentry-tracing = {version = "0.31.0"}
sentry = { version = "0.31.0",features = ["backtrace", "anyhow"] }
sentry-anyhow = { version= "0.31.1", features = ["backtrace"]}
serde_json = "1.0.33"
serde = { version  = "1.0.159", features = ["derive"]}
tonic = "0.9.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry-instrumentation-sdk = "0.12.0"
