[package]
name = "nats_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto" }
anyhow = { version = "1.0.71", features = ["backtrace"]}
bytes = "1.5.0"
async-nats = "0.31.0"
nkeys = "0.3.2"
sentry-anyhow = { version= "0.31.1", features = ["backtrace"]}
tracing = "0.1"
tracing-opentelemetry-instrumentation-sdk = "0.12.0"
