[package]
name = "services_client"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent_settings = { path = "../../core/settings" }
tonic = "0.10.2"
anyhow = { version = "1.0.71", features = ["backtrace"]}
prost = "0.12.3"
serde = { version  = "1.0.159", features = ["derive"]}
serde_json = "1.0.33"
tracing = "0.1"


[build-dependencies]
tonic-build = "0.9.2"