[package]
name = "wireguard"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version  = "1.0.159", features = ["derive"]}
base64 = "0.22.0"
anyhow = { version = "1.0.71", features = ["backtrace"]}
rand = "0.8.5"
x25519-dalek = { version = "2.0", features = ["getrandom", "static_secrets"] }
defguard_wireguard_rs = "0.4.2"
tracing = "0.1"