[package]
name = "agent_settings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"]}
sentry-anyhow = { version= "0.31.1", features = ["backtrace"]}
serde_json = "1.0.33"
serde_yaml = "0.9.21"
serde = { version  = "1.0.159", features = ["derive"]}
tonic = "0.9.2"
tracing = "0.1"
tracing-opentelemetry-instrumentation-sdk = "0.12.0"
dotenv = "0.15.0"
